Fix issue "heart is getting cut off in stylist's card"
FRON-1077

--- a/mobile/client/src/app/stylists/stylist-card/stylist-card.component.scss
+++ b/mobile/client/src/app/stylists/stylist-card/stylist-card.component.scss
@@ -99,8 +99,10 @@ stylist-card {
   }
 
   i[class^=mb-icon] {
+    height: pxtovw(14px);
     margin-right: pxtovw(2px);
     font-size: pxtovw(14px);
+    line-height: pxtovw(15px);
     color: color($colors, orange);
     transition: all 150ms ease;
   }
